--- a/app/views/personalizations/edit.html.erb
+++ b/app/views/personalizations/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @personalization %> |
-<%= link_to 'Back', personalizations_path %>
+<%= link_to main_app.url_for([@product, @theme, @personalization]), class: 'btn btn-danger' do %>
+  <span class="icon icon-delete"></span>
+  Cancel
+<% end %>
