--- a/app/views/personalizations/index.html.erb
+++ b/app/views/personalizations/index.html.erb
@@ -2,27 +2,23 @@
 
 <h1>Listing Personalizations</h1>
 
-<table>
+<table width="100%">
   <thead>
     <tr>
-      <th>Theme</th>
-      <th>Picture</th>
       <th>Name</th>
-      <th>Order</th>
-      <th colspan="3"></th>
+      <th>Picture</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @personalizations.each do |personalization| %>
       <tr>
-        <td><%= personalization.theme %></td>
-        <td><%= personalization.picture %></td>
         <td><%= personalization.name %></td>
-        <td><%= personalization.order %></td>
-        <td><%= link_to 'Show', personalization %></td>
-        <td><%= link_to 'Edit', edit_personalization_path(personalization) %></td>
-        <td><%= link_to 'Destroy', personalization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= image_tag personalization.picture.url(:thumb) %></td>
+        <td><%= link_to 'Show', main_app.url_for([@product, @theme, personalization]), class: 'btn btn-default' %></td>
+        <td><%= link_to 'Edit', main_app.url_for([:edit, @product, @theme, personalization]), class: 'btn btn-default' %></td>
+        <td><%= link_to 'Destroy', main_app.url_for([@product, @theme, personalization]), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +26,7 @@
 
 <br>
 
-<%= link_to 'New Personalization', new_personalization_path %>
+<%= link_to main_app.url_for([:new, @product, @theme, :personalization]), class: 'btn btn-primary' do %>
+  <i class="icon icon-plus"></i>
+  Nova personalização
+<% end %>
