--- a/app/views/personalizations/new.html.erb
+++ b/app/views/personalizations/new.html.erb
@@ -1,5 +1,10 @@
+<%= render partial: 'spree/admin/shared/product_tabs', locals: { current: :personalization } %>
+
 <h1>New Personalization</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', personalizations_path %>
+<%= link_to main_app.product_themes_path(@product), class: 'btn btn-danger' do %>
+  <span class="icon icon-delete"></span>
+  Cancel
+<% end %>
