--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -1,25 +1,48 @@
-<%= form_for(@theme, url: main_app.url_for([@product, @theme])) do |f| %>
-  <% if @theme.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@theme.errors.count, "error") %> prohibited this theme from being saved:</h2>
-
-      <ul>
-      <% @theme.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= simple_form_for(@theme, url: main_app.url_for([@product, @theme]),  html: { class: '' }) do |f| %>
+  <fieldset>
+    <legend>Tema</legend>
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.input :name %>
+        <%= f.input :default, hint: Spree.t('personalizations.themes.default.hint') %>
+      </div>
+      <div class="col-md-6">
+        <%= f.input :picture %>
+      </div>
+      <div class="col-md-12">
+        <%= f.button :submit %>
+      </div>
     </div>
-  <% end %>
+  </fieldset>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :default %><br>
-    <%= f.check_box :default %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <% if @theme.persisted? %>
+    <fieldset>
+      <legend>
+        Personalizações
+      </legend>
+
+      <div class="row">
+        <ul class="col-md-12">
+          <% if @theme.personalizations.any? %>
+            <% @theme.personalizations.each do |personalization| %>
+              <li>
+                <%= link_to personalization.name, main_app.edit_product_theme_personalization_path(@product, @theme, @personalization) %>
+              </li>
+            <% end %>
+          <% else %>
+            Sem personalizações
+          <% end %>
+        </ul>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <%= link_to main_app.new_product_theme_personalization_path(@product, @theme), class: 'btn btn-primary' do %>
+            <i class="icon icon-plus"></i>
+            Nova personalização
+          <% end %>
+        </div>
+      </div>
+    </fieldset>
+  <% end %>
 <% end %>
