--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Theme</h1>
+<%= render partial: 'spree/admin/shared/product_tabs', locals: { current: :personalization } %>
+
+<h1><%= Spree.t('personalizations.new_theme') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', main_app.product_themes_path(@product) %>
+<%= link_to main_app.product_themes_path(@product), class: 'btn btn-danger' do %>
+  <span class="icon icon-delete"></span>
+  Cancel
+<% end %>
