--- a/app/views/personalizations/_form.html.erb
+++ b/app/views/personalizations/_form.html.erb
@@ -13,4 +13,35 @@
       </div>
     </div>
   </fieldset>
+
+  <% if @personalization.persisted? %>
+    <fieldset>
+      <legend>
+        Layouts
+      </legend>
+
+      <div class="row">
+        <ul class="col-md-12">
+          <% if @personalization.layouts.any? %>
+            <% @personalization.layouts.each do |layout| %>
+              <li>
+                <%= link_to layout.name, main_app.url_for([:edit, @product, @theme, @personalization, @layout]) %>
+              </li>
+            <% end %>
+          <% else %>
+            Sem layouts
+          <% end %>
+        </ul>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <%= link_to main_app.url_for([:new, @product, @theme, @personalization, :layout]), class: 'btn btn-primary' do %>
+            <i class="icon icon-plus"></i>
+            Novo Layout
+          <% end %>
+        </div>
+      </div>
+    </fieldset>
+  <% end %>
 <% end %>
