--- a/app/views/personalizations/new.html.erb
+++ b/app/views/personalizations/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= render 'form' %>
 
-<%= link_to main_app.product_themes_path(@product), class: 'btn btn-danger' do %>
+<%= link_to main_app.url_for([@product, @theme, :personalizations]), class: 'btn btn-danger' do %>
   <span class="icon icon-delete"></span>
   Cancel
 <% end %>
