--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -26,7 +26,7 @@
           <% if @theme.personalizations.any? %>
             <% @theme.personalizations.each do |personalization| %>
               <li>
-                <%= link_to personalization.name, main_app.edit_product_theme_personalization_path(@product, @theme, @personalization) %>
+                <%= link_to personalization.name, main_app.url_for([:edit, @product, @theme, personalization]) %>
               </li>
             <% end %>
           <% else %>
@@ -37,7 +37,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <%= link_to main_app.new_product_theme_personalization_path(@product, @theme), class: 'btn btn-primary' do %>
+          <%= link_to main_app.url_for([:new, @product, @theme, :personalization]), class: 'btn btn-primary' do %>
             <i class="icon icon-plus"></i>
             Nova personalização
           <% end %>
