--- a/app/views/personalizations/_form.html.erb
+++ b/app/views/personalizations/_form.html.erb
@@ -6,7 +6,8 @@
         <%= f.input :name %>
       </div>
       <div class="col-md-6">
-        <%= f.input :picture %>
+        <%= f.input :picture, as: :image_preview, input_html: {preview_version: :small_thumb} %>
+
       </div>
       <div class="col-md-12">
         <%= f.button :submit %>
@@ -20,23 +21,51 @@
         Layouts
       </legend>
 
-      <div class="row">
-        <ul class="col-md-12">
-          <% if @personalization.layouts.any? %>
+      <% if @personalization.layouts.any? %>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Previsualização</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody>
             <% @personalization.layouts.each do |layout| %>
-              <li>
-                <%= link_to layout.name, main_app.url_for([:edit, @product, @theme, @personalization, @layout]) %>
-              </li>
+            <tr>
+              <td><%= layout.name %></td>
+              <td>
+                <div class="layout-preview">
+                  <%= image_tag @personalization.picture.url(:thumb) %>
+                  <% layout.area_editions.each do |a| %>
+                    <div class="area area-<%= a.area_type %>" style="left: <%= a.x1 / 5.to_f %>%; top: <%= a.y1 / 5.to_f %>%; right: <%= (500 - a.x2) / 5.to_f %>%; bottom: <%= (500 - a.y2) / 5.to_f %>%;">
+                      <div class="t">
+                        <div class="tc">
+                          <%= a.area_type %>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </td>
+              <td>
+                <%= link_to 'Show', show_link(layout) %>
+                <%= link_to 'Edit', edit_link(layout) %>
+                <%= link_to 'Destroy', show_link(layout), method: :delete, data: { confirm: 'Are you sure?' } %>
+              </td>
+            </tr>
             <% end %>
-          <% else %>
-            Sem layouts
-          <% end %>
-        </ul>
-      </div>
+          </tbody>
+        </table>
+      <% else %>
+        <tr>
+          Sem layouts
+        </tr>
+      <% end %>
 
       <div class="row">
         <div class="col-md-12">
-          <%= link_to main_app.url_for([:new, @product, @theme, @personalization, :layout]), class: 'btn btn-primary' do %>
+          <%= link_to new_link(:layout), class: 'btn btn-primary' do %>
             <i class="icon icon-plus"></i>
             Novo Layout
           <% end %>
