--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -67,12 +67,11 @@ Plugin http://odyniec.net/projects/imgareaselect/
 
 <h1>Listing Themes</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Spree product</th>
-      <th>Picture</th>
       <th>Name</th>
+      <th>Picture</th>
       <th>Default</th>
       <th colspan="3"></th>
     </tr>
@@ -82,10 +81,13 @@ Plugin http://odyniec.net/projects/imgareaselect/
     <% @themes.each do |theme| %>
       <tr>
         <td><%= theme.name %></td>
+        <td><%= image_tag theme.picture.url(:small_thumb) %></td>
         <td><%= theme.default %></td>
-        <td><%= link_to 'Show', main_app.url_for([@product, theme]) %></td>
-        <td><%= link_to 'Edit', main_app.url_for([:edit, @product, theme]) %></td>
-        <td><%= link_to 'Destroy', main_app.url_for([@product, theme]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', show_link(theme) %>
+          <%= link_to 'Edit', edit_link(theme) %>
+          <%= link_to 'Destroy', show_link(theme), method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
