--- a/app/views/personalizations/_form.html.erb
+++ b/app/views/personalizations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@personalization, url: main_app.url_for([@product, @theme, @personalization]),  html: { class: '' }) do |f| %>
+<%= simple_form_for(@personalization, url: main_app.url_for(nested_resource + [@personalization]),  html: { class: '' }) do |f| %>
   <fieldset>
     <legend>Personalização</legend>
     <div class="row">
@@ -49,9 +49,9 @@
                 </div>
               </td>
               <td>
-                <%= link_to 'Show', show_link(layout) %>
-                <%= link_to 'Edit', edit_link(layout) %>
-                <%= link_to 'Destroy', show_link(layout), method: :delete, data: { confirm: 'Are you sure?' } %>
+                <%= link_to 'Show', show_url(layout) %>
+                <%= link_to 'Edit', edit_url(layout) %>
+                <%= link_to 'Destroy', destroy_url(layout), method: :delete, data: { confirm: 'Are you sure?' } %>
               </td>
             </tr>
             <% end %>
@@ -65,7 +65,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <%= link_to new_link(:layout), class: 'btn btn-primary' do %>
+          <%= link_to new_url(:layout), class: 'btn btn-primary' do %>
             <i class="icon icon-plus"></i>
             Novo Layout
           <% end %>
