--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,21 +2,30 @@
   <%= Spree.t(:categories) %>
 <% end %>
 
+<% content_for :page_actions do %>
+  <%= button_link_to Spree.t(:new_category), new_url(:category), { class: "btn-success", icon: 'add', id: 'admin_new_category' } %>
+<% end %>
+
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Picture</th>
-      <th colspan="3" width="20%">Actions</th>
+      <th><%= Spree.t(:name) %></th>
+      <th><%= Spree.t(:products) %></th>
+      <th colspan="3" width="20%"><%= Spree.t(:acoes) %></th>
     </tr>
   </thead>
 
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= image_tag category.picture.url(:thumb) %></td>
-        <td><%= link_to 'Show', main_app.url_for([:admin, category]), class: 'btn btn-default' %></td>
+        <td>
+          <%= image_tag category.picture.url(:small_thumb) %>
+          <%= category.name %>
+        </td>
+        <td><%= category.products.count %></td>
+        <td>
+          <%#= link_to 'Show', main_app.url_for([:admin, category]), class: 'btn btn-default' %>
+        </td>
         <td><%= link_to 'Edit', main_app.url_for([:edit, :admin, category]), class: 'btn btn-default' %></td>
         <td><%= link_to 'Destroy', main_app.url_for([:admin, category]), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
